[tool.poetry]
name = "congestionstreaming"
version = "0.1.0"
description = ""
authors = ["skip"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
aiokafka = "^0.10.0"
aiohttp = "^3.9.3"
pandas = "^2.2.0"
numpy = "^1.26.4"
requests = "^2.31.0"
xmltodict = "^0.13.0"
confluent-kafka = "^2.3.0"
pydantic = "^2.6.1"
pylint = "^3.0.3"
mypy = "^1.8.0"
types-requests = "^2.31.0.20240125"
update = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
